fixed image list problem

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,4 +10,9 @@
 
 {{ .Content }}
 
+{{ range .Params.images }}
+  <img src="{{ .image }}" alt="Image">
+{{ end }}
+
+
 {{ partial "footer.html" . }}
