--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,9 @@
 {{ partial "header.html" . }}
-
+{{ $month_names := slice "janvier" "février" "mars" "avril" "mai" "juin" "juillet" "août" "septembre" "octobre" "novembre" "décembre" }}
+{{ $month := sub .Date.Month 1 }}
 <h1 class="post-title">{{ .Title }}</h1>
+<time datetime="{{ .Date.Format "2006-01-02"}}">{{ .Date.Day }}&nbsp;{{ index $month_names $month }} {{ .Date.Year }}</time>
 
-<span class="post-date">{{ .Date.Format "January 2, 2006" }}</span>
 
 {{ if .Params.image }}
 	<img src="{{ .Params.image }}" >
